--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <p>You make every moment special. This is for you! 💖</p>
         
         <div class="gallery">
-            <img src="pics/483963748_2385539818473774_551712067198010543_n.jpg" alt="I">
-            <img src="pics/484484553_990387726523072_6976295328631476606_n.jpg" alt="LOVE">
-            <img src="pics/485084877_1198597661827293_8970372851166089639_n.jpg" alt="YOU">
-            <img src="pics/485087972_634318599348906_1552060578217598544_n.jpg" alt="Forever">
+            <img src="https://github.com/Art292007/my-world/blob/main/485087972_634318599348906_1552060578217598544_n.jpg?raw=true" alt="I">
+            <img src="https://github.com/Art292007/my-world/blob/main/485084877_1198597661827293_8970372851166089639_n.jpg?raw=true" alt="LOVE">
+            <img src="https://github.com/Art292007/my-world/blob/main/484484553_990387726523072_6976295328631476606_n.jpg?raw=true" alt="YOU">
+            <img src="https://github.com/Art292007/my-world/blob/main/483963748_2385539818473774_551712067198010543_n.jpg?raw=true" alt="Forever">
         </div>
 
         <div class="message">
